--- a/landing-page/style.css
+++ b/landing-page/style.css
@@ -1,139 +1,237 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-*{
-	margin:0;
-	padding:0;
-	box-sizing:border-box;
-	font-family: 'Montserrat', sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Montserrat", sans-serif;
 }
 
 body {
-	display:flex;
-	flex-direction: column;
-	align-items: center;
-	padding-top:20px;
-	background-color:#F5F5F5;
-	width: 100vw;
-	height: 150vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: rgb(228, 228, 232);
+  width: 100vw;
+  height: 150vh;
 }
 
 header {
-	background-color: #FFFFFF;
-	display:flex;
-	justify-content:space-between;
-	align-items:center;
-	max-height:110px;
-	width:1725px;
-	border:1px solid rgba(0, 0, 0, 0.1);
+  background-color: #b0c701;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  min-height: 130px;
+  width: 100%;
 }
 
 nav {
-	display:flex;
-	width:689px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  height: 100%;
 }
 
 .liContainer {
-	display:flex;
-	list-style:none;
-	gap:5%;
-	width:689px;
-	font-weight:600;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+  height: 100%;
+  gap: 50px;
+  width: 100%;
+  font-weight: 600;
 }
-
+.liContainer li {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 .liContainer li a {
-	text-decoration: none;	
-	color:black;
+  text-decoration: none;
+  color: black;
 }
 
-.liContainer li a:hover {
-	color: #6c63ff;
+.liContainer li:hover {
+  background-color: rgba(5, 5, 5 ,0.5);
 }
 
 .imgLogo {
-	display:flex;
-	align-items:center;
+  display: flex;
+  align-items: center;
 }
 
-.imgLogo img{
-	height:100px;
-	margin-left:30px
+.imgLogo img {
+  height: 100px;
+  margin-left: 30px;
 }
+
 main {
-	display: flex;
-	width: 1725px;
-	background-color: #FFFFFF;
-	height: auto;
-	flex-direction: column; 
-	align-items: center;
+  display: flex;
+  width: 100%;
+  background-color: #000000;
+  background-image: linear-gradient(315deg, #000000 0%, #414141 74%);
+  height: auto;
+  flex-direction: column;
+  align-items: center;
 }
+
 .section1 {
-	width: 1725px;
-	background-color: #FFFFFF;
-	height: 876px;
-	border:1px solid rgba(0, 0, 0, 0.1);
-	display: flex;
-	justify-content: space-between;
+  width: 100%;
+  background-color: transparent;
+  min-height: 876px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  display: flex;
 }
+
 .section2 {
-	width: 1725px;
-	background-color: #FFFFFF;
-	height: 350px;
-	border:1px solid rgba(0, 0, 0, 0.1);
-	display: flex;
-	justify-content: center;		
-	align-items: center;
-	padding: 0 300px;
+  width: 100%;
+  background-color: #fafafa;
+  min-height: 350px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 300px;
 }
+
 .section2 p {
-	text-align: center;
+  text-align: center;
+}
+
+.section3 {
+  width: 100%;
+  min-height: 350px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 300px;
+}
+.section3 p {
+  text-align: center;
+  color: rgb(255, 255, 255);
 }
 .slogan {
-	width: 50%;
-	display: flex;
-	flex-direction: column;	
-	justify-content: center;
-	gap: 30px;
-	padding: 0 90px;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 30px;
+  padding: 0 90px;
+  color:#fafafa;
 }
-.sloganButton {
-	display: flex;
-	gap: 25px;
-	width: 50%;
+
+.slogan p {
+  font-size: 18px;
+  line-height: 30px;
 }
-.sloganButton button {
-	width: 50%;
-	border-radius: 30px;
-	border-style: none;
-	border: 3px solid rgb(0, 0, 0);
-	background-color: white;
-	padding: 5px;
-	font-weight: 600; 
-	font-size: 15px;
-	background-color: #6c63ff;
-	color: #fafafa;
+.slogan span {
+  color:#e1ff00;
 }
-.sloganButton button:hover {
-	background-color: aliceblue;
-	color:black;
-	cursor: pointer;
+.buttonContainer {
+  display: flex;
+  gap: 25px;
+  width: 50%;
 }
+
+.button {
+  border-radius: 30px;
+  border: 1px solid rgb(0, 0, 0);
+  background: transparent;
+  padding: 15px 35px;
+  text-transform: uppercase;
+  font-weight: 700;
+  color: #000;
+  cursor: pointer;
+}
+
+.button:hover {
+  background-color: purple;
+  border: 1px solid purple;
+  color: black;
+}
+
+.firstButton {
+  background-color: #e1ff00;
+  color: #000;
+}
+
+.secondButton:hover {
+  background-color: transparent;
+  color: purple;
+}
+
 .imgContainer {
-	width: 50%;
-	display: flex;
-	align-items: center;
+  width: 50%;
+  display: flex;
+  align-items: center;
+  background-color: transparent;
+  padding: 90px;
 }
 
 .imgContainer img {
-	width: 100%;
-	height: auto;
+  max-width: 100%;
+  min-width: 200px;
+  height: auto;
+  border-radius: 10px;
 }
-
-
-@media (max-width:783px){
-	header {
-		flex-direction:column;
-	}
-	nav {
-		display:none;
-	}
+input {
+  display: none;
+}
+.menuHamburguesa label {
+  display: none;
+}
+@media screen and (max-width: 600px) {
+  .section1 {
+    flex-direction: column;
+    justify-content: center;
+    padding-top: 20px;
+  }
+  .menuHamburguesa label{
+    display: flex;
+    cursor: pointer;
+  }
+  .menuHamburguesa {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+    font-size: 30px;
+  }
+  .liContainer li {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+  }
+  .liContainer {
+    opacity: 0;
+    pointer-events: none;
+    left: -100%;
+    position: fixed;
+    width: 80vw;
+    top: 0; 
+    height: 100vh;
+    background-color: rgba(160, 182, 16, 0.5);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+  }
+  
+  input:checked ~ ul {
+    left:0; 
+    pointer-events: all;
+    opacity: 1;
+    transition: all 0.6s ease 0s;
+  }
+  .liContainer li a{
+    color: white;
+  } 
+  
 }
