--- a/landing-page/style.css
+++ b/landing-page/style.css
@@ -6,7 +6,9 @@
   box-sizing: border-box;
   font-family: "Montserrat", sans-serif;
 }
-
+html {
+  scroll-behavior: smooth;
+}
 body {
   display: flex;
   flex-direction: column;
@@ -55,7 +57,7 @@ nav {
 }
 
 .liContainer li:hover {
-  background-color: rgba(5, 5, 5 ,0.5);
+  background-color: rgba(5, 5, 5, 0.5);
 }
 
 .imgLogo {
@@ -70,10 +72,10 @@ nav {
 
 main {
   display: flex;
+  height: auto;
   width: 100%;
   background-color: #000000;
   background-image: linear-gradient(315deg, #000000 0%, #414141 74%);
-  height: auto;
   flex-direction: column;
   align-items: center;
 }
@@ -89,29 +91,113 @@ main {
 .section2 {
   width: 100%;
   background-color: #fafafa;
-  min-height: 350px;
+  min-height: 500px;
   border: 1px solid rgba(0, 0, 0, 0.1);
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 0 300px;
 }
-
+.section {
+  position: relative;
+}
+#id-2,
+#id-3,
+#id-4 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: red;
+  opacity: 0;
+}
 .section2 p {
   text-align: center;
 }
 
 .section3 {
   width: 100%;
-  min-height: 350px;
+  min-height: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: #fafafa;
+}
+.benefit {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 0 30px;
+  gap: 20px;
+  width: 33.3%;
+}
+.benefit i {
+  font-size: 50px;
+}
+.benefit h3 {
+  font-weight: 700;
+  color: YellowGreen;
+}
+
+.benefit p {
+  text-align: center;
+}
+.divContainer {
+  width: 100%;
+  height: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 0 300px;
+  padding-bottom: 30px;
+  padding: 0 20px;
 }
-.section3 p {
-  text-align: center;
-  color: rgb(255, 255, 255);
+.title1 {
+  width: 100%;
+  height: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+}
+.section4 {
+  width: 100%;
+  min-height: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #fafafa;
+}
+.steps {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 0 30px;
+  gap: 30px;
+}
+.steps i {
+  font-size: 50px;
+}
+.divContainer2 {
+  height: 50%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 30px;
+  padding: 0 20px;
+}
+.title2 {
+  height: 50%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
 }
 .slogan {
   width: 50%;
@@ -120,7 +206,7 @@ main {
   justify-content: center;
   gap: 30px;
   padding: 0 90px;
-  color:#fafafa;
+  color: #fafafa;
 }
 
 .slogan p {
@@ -128,7 +214,7 @@ main {
   line-height: 30px;
 }
 .slogan span {
-  color:#e1ff00;
+  color: #e1ff00;
 }
 .buttonContainer {
   display: flex;
@@ -189,7 +275,7 @@ input {
     justify-content: center;
     padding-top: 20px;
   }
-  .menuHamburguesa label{
+  .menuHamburguesa label {
     display: flex;
     cursor: pointer;
   }
@@ -200,6 +286,7 @@ input {
     width: 50px;
     height: 50px;
     font-size: 30px;
+    padding-right: 30px;
   }
   .liContainer li {
     width: 100%;
@@ -214,7 +301,7 @@ input {
     left: -100%;
     position: fixed;
     width: 80vw;
-    top: 0; 
+    top: 0;
     height: 100vh;
     background-color: rgba(160, 182, 16, 0.5);
     display: flex;
@@ -222,16 +309,15 @@ input {
     justify-content: center;
     align-items: center;
     font-size: 20px;
-  }
-  
-  input:checked ~ ul {
-    left:0; 
-    pointer-events: all;
-    opacity: 1;
     transition: all 0.6s ease 0s;
   }
-  .liContainer li a{
+
+  input:checked ~ ul {
+    left: 0;
+    pointer-events: all;
+    opacity: 1;
+  }
+  .liContainer li a {
     color: white;
-  } 
-  
+  }
 }
